Sync with latest changes